--- a/front/src/components/Pages/AddRequest/AddRequest.css
+++ b/front/src/components/Pages/AddRequest/AddRequest.css
@@ -114,53 +114,8 @@ th {
   color: #fa8c15;
 }
 
-/* =============== */
-
-.info-accountant {
-  /* background-image: linear-gradient(180deg, #e0f7fa, #b2ebf29b); */
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  border-radius: 20px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.121);
-  margin-bottom: 20px;
-  background-color: #fff;
-}
-
-.wrapper-info {
+.wrapper-cards {
   display: flex;
   gap: 20px;
-  width: 100%;
-}
-
-.wrapper-image {
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.wrapper-image img {
-  width: 100%;
-  height: 100%;
-}
-
-.wrapper-text {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.wrapper-text h2 {
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.wrapper-text span {
-  font-weight: 600;
-}
-
-.info-organization {
-  width: 100%;
-  display: flex;
   align-items: start;
-  justify-content: end;
 }
