--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -8,29 +8,95 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: 10px;
+	gap: 20px;
 }
 
 .wrapper-profile {
-	display: flex;
-	align-items: stretch; /* Важно для растяжения дочерних элементов */
-	justify-content: space-between;
-	gap: 20px;
-	width: calc((100% - 20px * 2) / 3);
+	align-items: stretch;
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-auto-rows: minmax(200px, 1fr);
+	grid-template-rows: repeat(6, fr);
+	gap: 30px;
+	/* grid-template-areas:
+		". . . . . profileCenter profileRight profileRight profileRight profileRight profileRight profileRight"
+		". . . . . profileCenter profileRight profileRight profileRight profileRight profileRight profileRight"
+		". . . . . profileCenter profileRight profileRight profileRight profileRight profileRight profileRight"
+		". . . . . profileCenter profileRight profileRight profileRight profileRight profileRight profileRight"; */
+
+	/* border: 1px solid orange; */
 }
 
-.profile_left,
-.profile_right {
+.profile_style {
+	display: flex;
+	flex-direction: column;
+	border-radius: 20px;
+	gap: 20px;
+	padding: 30px;
+	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+		0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+.profile_left {
 	display: flex;
 	flex-direction: column;
 	border-radius: 10px;
 	gap: 20px;
 	padding: 30px;
-	background-color: #fff;
 	border: 1px solid #0000000f;
 	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	max-height: max-content;
+	/* grid-area: profileLeft; */
+	position: fixed;
+	min-height: 520px;
+	max-width: 300px;
+	/* width: 100%; */
+}
+
+.profile_center {
+	grid-area: profileCenter;
+	grid-column: 4/9;
+	grid-row: 1/5;
+}
+
+.profile_center-content {
+	/* border: 1px solid orange; */
+}
+
+.profile_right {
+	grid-area: profileRight;
+	grid-column: 9/13;
+	grid-row: 1/5;
+}
+
+/* UbottomLink */
+
+.profileBottomNav {
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	position: relative;
+	overflow-x: auto;
+	padding-bottom: 20px;
+	padding-top: 20px;
+	grid-area: profileBottomNav;
+}
+
+.profileBottomNav__link {
+	border-bottom: 4px solid #94a3b8;
+	width: 100%;
+	text-align: center;
+	padding: 20px;
+}
+
+.profileBottomNav__link:hover:not(:focus-visible) {
+	background-color: #f3f9f1;
+	background-color: #00968743;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom-color: #009688;
+	color: #fff;
 }
 
 /* .profile_left {
@@ -68,101 +134,6 @@
 
 .MuiPaper-root {
 	box-shadow: none;
-}
-
-.uprofile_list {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-}
-
-.user-content {
-	height: 100%;
-	width: 100%;
-	display: flex;
-}
-
-.user-details {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-}
-
-.user-details_title {
-	color: #607d8b;
-	font-size: 22px;
-	font-weight: 500;
-	margin-bottom: 20px;
-}
-
-.user-details-content {
-	display: flex;
-	align-items: start;
-	gap: 20px;
-}
-
-.user-details_photo {
-	background-color: #fff;
-	border: 1px solid #0000000f;
-	border-radius: 10px;
-	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-		0 2px 4px -1px rgba(0, 0, 0, 0.06);
-	width: 35%;
-	padding: 24px;
-	display: flex;
-	flex-direction: column;
-	gap: 15px;
-	align-items: center;
-}
-
-.user-details_photo .photo {
-	width: 100%;
-}
-
-.user-details-text {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
-}
-
-/* UbottomLink */
-
-.ubottomnav {
-	display: flex;
-	justify-content: center;
-	gap: 20px;
-	position: relative;
-	overflow-x: auto;
-	padding-bottom: 20px;
-	padding-top: 20px;
-}
-
-.ubottomnav__link {
-	border-bottom: 4px solid #94a3b8;
-	width: 100%;
-	text-align: center;
-	padding: 20px;
-}
-
-.ubottomnav__link:hover:not(:focus-visible) {
-	background-color: #f3f9f1;
-	background-color: #00968743;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-	border-bottom-color: #009688;
-	color: #fff;
-}
-
-.ubottomnav__-- {
-	display: none;
-}
-
-.user-details_list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	gap: 20px;
 }
 
 /* Информация про организацию */
