--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -1,3 +1,8 @@
+.profile__container {
+	max-width: 1920px;
+	padding: 0 20px;
+	margin: 0 auto;
+}
 .profile_header {
 	display: flex;
 	align-items: center;
