--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -1,21 +1,21 @@
 .uwidget__content {
 	display: flex;
 	align-items: center;
-	margin-bottom: 15px;
-}
-.uwidget__list {
-	display: flex;
 	justify-content: center;
-	align-items: stretch;
-	gap: 10px;
+	margin-bottom: 15px;
 }
 
 .uwidget__item {
 	display: flex;
 	flex-direction: column;
-	background: red;
+	align-items: center;
+	gap: 10px;
 	padding: 30px 30px 30px 30px;
 	min-width: 145px;
 	max-width: 146px;
+}
+
+.uwidget__item {
 	border-radius: 10px;
+	background: linear-gradient(to right, #fec163, #be7c6862);
 }
