--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -3,6 +3,8 @@
 	align-items: center;
 	justify-content: center;
 	margin-bottom: 15px;
+	padding: 16px;
+	background: red;
 }
 
 .uwidget__item {
@@ -11,11 +13,20 @@
 	align-items: center;
 	gap: 10px;
 	padding: 30px 30px 30px 30px;
-	min-width: 145px;
 	max-width: 146px;
 }
 
 .uwidget__item {
-	border-radius: 10px;
-	background: linear-gradient(to right, #fec163, #be7c6862);
+	background-color: rgba(255, 205, 130, 0.8);
+	border-radius: 16px;
+	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1),
+		/* Легкая черная тень */ 0 1px 3px rgba(255, 255, 255, 0.2);
+	transition: transform 0.3s ease, box-shadow 0.3s ease;
+	max-width: 246px;
+}
+
+.uwidget__item:hover {
+	transform: translateY(-2px);
+	box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15),
+		/* Усиление черной тени */ 0 4px 6px rgba(255, 255, 255, 0.25);
 }
