--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -7,7 +7,7 @@
 	background: red;
 }
 
-.uwidget__item {
+.uwidget__style {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -16,17 +16,16 @@
 	max-width: 146px;
 }
 
-.uwidget__item {
+.uwidget__style {
 	background-color: rgba(255, 205, 130, 0.8);
 	border-radius: 16px;
-	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1),
-		/* Легкая черная тень */ 0 1px 3px rgba(255, 255, 255, 0.2);
+	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 	max-width: 246px;
 }
 
-.uwidget__item:hover {
+.uwidget__style:hover {
 	transform: translateY(-2px);
 	box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15),
-		/* Усиление черной тени */ 0 4px 6px rgba(255, 255, 255, 0.25);
+		0 4px 6px rgba(255, 255, 255, 0.25);
 }
