--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -57,10 +57,23 @@
 	grid-row: 1/5;
 }
 
-.profile_center-widgets {
-	display: flex;
-	gap: 20px;
-	
+.profile__center_widgets {
+	display: grid;
+	grid-template-columns: repeat(12, 1fr); /* 12 колонок */
+	grid-template-rows: repeat(3, 1fr); /* Автоматическая высота для строк */
+	gap: 10px;
+}
+
+.profile__center_widget1 {
+	grid-column: 8 / 13; /* Виджет занимает все 12 колонок */
+}
+
+.profile__center_widget2 {
+	grid-column: 7 / 13; /* Виджет занимает 6 колонок */
+}
+
+.profile__center_widget3 {
+	grid-column: 7 / 13; /* Виджет занимает 6 колонок */
 }
 
 .profile_right {
