--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -13,7 +13,7 @@
 	align-items: center;
 	gap: 10px;
 	padding: 30px 30px 30px 30px;
-	max-width: 146px;
+	/* max-width: 146px; */
 }
 
 .uwidget__style {
