--- a/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
+++ b/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
@@ -1,6 +1,92 @@
-.calendar {
+/* Основной контейнер */
+.ucalendar__content {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	padding: 20px;
+	background: rgba(255, 255, 255, 0.7);
+	border-radius: 16px;
+	box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(10px);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	transition: all 0.3s ease-in-out;
+}
+
+/* Календарь */
+.react-calendar {
 	width: 100%;
-	border: 1px solid rgba(197, 197, 197, 0.37);
-	box-shadow: 0px 0px 10px rgba(197, 197, 197, 0.37);
+	max-width: 100%;
+	background-color: rgba(255, 255, 255, 0.5);
+	border: none;
+	border-radius: 12px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(10px);
+	border: 1px solid rgba(255, 255, 255, 0.2);
 	margin-bottom: 20px;
+}
+
+/* Кнопки */
+.ucalendar__content button {
+	padding: 10px 20px;
+	background-color: rgba(255, 255, 255, 0.5);
+	color: #000;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	border-radius: 6px;
+	cursor: pointer;
+	font-size: 16px;
+	transition: background-color 0.3s ease, color 0.3s ease;
+	backdrop-filter: blur(10px);
+}
+
+.ucalendar__content button:hover {
+	background-color: rgba(255, 255, 255, 0.7);
+	color: #939191 !important;
+}
+
+/* Подсвеченные даты с событиями */
+.highlighted-date {
+	background-color: rgba(255, 193, 7, 0.8) !important;
+	color: rgb(0, 0, 0) !important;
+	border-radius: 8px;
+	backdrop-filter: blur(5px);
+}
+
+/* Секция для добавления и просмотра события */
+
+/* Группировка инпутов горизонтально */
+
+.calendar__event {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	gap: 10px;
+}
+
+.calendar__inp {
+	align-self: stretch;
+	width: calc((100% - 20px * 2) / 2);
+	border: none;
+	padding: 15px 15px 15px 15px;
+	resize: none !important;
+	transition: background-color 0.2s ease-in-out;
+	border-radius: 10px;
+}
+
+.calendar__inp:hover:not(:focus-visible) {
+	background: rgba(160, 160, 160, 0.161);
+}
+
+.calendar__inp:focus {
+	background: rgba(160, 160, 160, 0.161);
+	outline: none;
+}
+
+.add__event {
+	padding: 20px;
+}
+.add__event:focus {
+	outline: none;
+	color: rgba(101, 108, 157, 0.715);
+	font-weight: 600;
+	font-size: 14px;
 }
