--- a/front/src/components/Pages/AddRequest/AddRequest.css
+++ b/front/src/components/Pages/AddRequest/AddRequest.css
@@ -102,7 +102,7 @@ th {
 
 .table-data {
   border: 1px solid #000;
-  padding: 20px;
+  padding: 10px;
 }
 
 .step-header {
@@ -116,6 +116,9 @@ th {
 
 .wrapper-cards {
   display: flex;
-  gap: 20px;
   align-items: start;
+  background-color: #fff;
+  margin-bottom: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.121);
 }
