--- a/front/src/components/UI/UserOrOrganizationCard/UserOrOrganizationCard.css
+++ b/front/src/components/UI/UserOrOrganizationCard/UserOrOrganizationCard.css
@@ -1,15 +1,40 @@
 /* =============== */
 
+.wrapper-accountant {
+  /* margin-bottom: 20px; */
+  width: 100%;
+  /* padding: 20px; */
+  min-height: 250px;
+  padding-bottom: 20px;
+}
+
+.card-splitting {
+  border-right: 1px solid #00000021;
+}
+
 .info-accountant {
   /* background-image: linear-gradient(180deg, #e0f7fa, #b2ebf29b); */
-  padding: 20px;
   display: flex;
   justify-content: space-between;
-  border-radius: 20px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.121);
-  margin-bottom: 20px;
-  background-color: #fff;
-  width: 50%;
+  border-top: 1px solid #00000021;
+  padding: 20px;
+}
+
+.card-title {
+  font-weight: 700;
+  padding: 20px;
+}
+
+.card-documents {
+  font-weight: 700;
+  padding: 20px;
+}
+
+.wrapper-card-file-service {
+  display: flex;
+  padding: 0 20px;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .wrapper-info {
@@ -21,6 +46,8 @@
 .wrapper-image {
   border-radius: 10px;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 
 .wrapper-image img {
