--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -42,6 +42,7 @@
 	gap: 20px;
 	padding: 30px;
 	border: 1px solid #0000000f;
+	background: #fff;
 	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	max-height: max-content;
