--- a/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
+++ b/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
@@ -72,8 +72,8 @@ button {
 
 .calendar__event_card {
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	/* justify-content: center; */
+	/* align-items: center; */
 	/* flex-direction: column; */
 	flex-wrap: wrap;
 	gap: 20px;
