--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -11,6 +11,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
+	text-align: center;
 	gap: 10px;
 	padding: 30px 30px 30px 30px;
 	/* max-width: 146px; */
@@ -21,7 +23,6 @@
 	border-radius: 16px;
 	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
-	max-width: 246px;
 }
 
 .uwidget__style:hover {
