--- a/front/src/components/Pages/UProfile/Uevents/Uevents.css
+++ b/front/src/components/Pages/UProfile/Uevents/Uevents.css
@@ -8,19 +8,16 @@
 	justify-content: center;
 	padding: 20px 20px 20px 20px;
 	border-radius: 10px;
-	background: #fff;
-
-	background-color: #ffffff;
+	/* background-color: #fff; */
+	background: rgba(197, 255, 130, 0.584);
 	border-radius: 16px;
-	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1),
-		/* Легкая черная тень */ 0 1px 3px rgba(255, 255, 255, 0.2);
+	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
 	padding: 24px;
-	/* margin: 16px; */
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .uevents__card:hover {
 	transform: translateY(-8px);
 	box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15),
-		/* Усиление черной тени */ 0 4px 6px rgba(255, 255, 255, 0.25);
+		0 4px 6px rgba(255, 255, 255, 0.25);
 }
