--- a/front/src/components/Pages/UProfile/Uevents/Uevents.css
+++ b/front/src/components/Pages/UProfile/Uevents/Uevents.css
@@ -6,13 +6,13 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 20px 20px 20px 20px;
 	border-radius: 10px;
 	/* background-color: #fff; */
 	background: rgba(197, 255, 130, 0.584);
 	border-radius: 16px;
 	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
-	padding: 24px;
+	width: 100%;
+	padding: 30px 30px 30px 30px;
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
