--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -20,9 +20,7 @@
 	align-items: stretch;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-auto-rows: minmax(200px, 1fr);
-	grid-template-rows: repeat(6, fr);
-	gap: 30px;
+	grid-template-rows: repeat(3, 1fr);
 }
 
 .profile_style {
@@ -45,41 +43,22 @@
 	background: #fff;
 	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
-	max-height: max-content;
 	position: fixed;
-	/* min-height: 520px; */
 	min-height: 723px;
 	max-width: 300px;
+	position: fixed;
 }
 
 .profile_center {
 	grid-area: profileCenter;
-	grid-column: 3/9;
-	grid-row: 1/5;
-}
-
-.profile__center_widgets {
+	grid-column: 3/10;
+	grid-row: 1/3;
 	display: grid;
-	grid-template-columns: repeat(12, 1fr); /* 12 колонок */
-	grid-template-rows: repeat(3, 1fr); /* Автоматическая высота для строк */
-	gap: 10px;
-}
-
-.profile__center_widget1 {
-	grid-column: 8 / 13; /* Виджет занимает все 12 колонок */
-}
-
-.profile__center_widget2 {
-	grid-column: 7 / 13; /* Виджет занимает 6 колонок */
-}
-
-.profile__center_widget3 {
-	grid-column: 7 / 13; /* Виджет занимает 6 колонок */
 }
 
 .profile_right {
 	grid-area: profileRight;
-	grid-column: 9/13;
+	grid-column: 10/13;
 	grid-row: 1/5;
 }
 
@@ -87,7 +66,7 @@
 
 .profilebottomnav__content {
 	display: grid;
-	grid-template-columns: repeat(12, minmax(0, 1fr));
+	grid-template-columns: repeat(3, minmax(0, 1fr));
 	grid-template-rows: repeat(6, minmax(200px, 1fr));
 }
 
@@ -99,7 +78,7 @@
 	overflow-x: auto;
 	padding-bottom: 20px;
 	padding-top: 20px;
-	grid-column: 3 / 12;
+	grid-column: 2/12;
 	grid-row: span 1 / 1;
 }
 
