--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -39,49 +39,67 @@
 	/* padding: 20px 20px 20px 20px; */
 }
 
-.udetails__uwidget {
-	padding: 16px;
-}
 .udetails__card {
 	display: flex;
+	flex-direction: column;
 	gap: 20px;
-	background: rgba(95, 111, 254, 0.337);
+	background: rgba(65, 82, 239, 0.284);
 	border-radius: 10px;
-	padding: 20px 20px 20px 20px;
-	width: 100%;
+	padding: 20px 10px 20px 10px;
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .user-details_photo {
-	/* background-color: #e2e9d9; */
-	border: 1px solid #0000000f;
+	display: flex;
+	/* justify-content: space-between; */
 	border-radius: 10px;
 	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
-	width: 35%;
 	padding: 24px;
-	display: flex;
-	flex-direction: column;
-	gap: 15px;
 	align-items: center;
 }
 
+.user_photo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 10px;
+	gap: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.156);
+	border-radius: 10px;
+	margin-right: 20px;
+}
+
 .user-details_photo .photo {
+	max-width: 350px;
 	width: 100%;
+	min-height: 250px;
+	max-height: 400px;
+	border-radius: 10px;
 }
 
 .user-details-text {
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
 }
 
 .udetails__info-list {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
 	gap: 20px;
+	background: rgba(255, 255, 255, 0.526);
+	border-radius: 16px;
+	box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(10px);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	padding: 20px;
+}
+
+.list {
+	width: calc((100% - 20px) / 2);
+	color: #000;
+	font-weight: 600;
+	font-size: 18px;
 }
 
 .udetails__item {
@@ -95,4 +113,5 @@
 	justify-content: center;
 	gap: 20px;
 	margin-bottom: 20px;
+	padding: 16px;
 }
