--- a/front/src/components/Pages/UProfile/Uevents/Uevents.css
+++ b/front/src/components/Pages/UProfile/Uevents/Uevents.css
@@ -9,6 +9,7 @@
 	border-radius: 10px;
 	/* background-color: #fff; */
 	background: rgba(197, 255, 130, 0.584);
+	background-color: #bfb5ff;
 	border-radius: 16px;
 	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
 	width: 100%;
