--- a/front/src/components/UI/WebTool/WebToolBox.css
+++ b/front/src/components/UI/WebTool/WebToolBox.css
@@ -5,17 +5,17 @@
 }
 
 .icon-button {
-	width: 60px;
-	height: 60px;
-	border-radius: 50%;
-	background-color: rgba(0, 0, 0, 0.73);
-	border: 2px solid rgba(255, 255, 255, 0.5);
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	min-height: 65px;
+	width: 65px;
+	border-radius: 50%;
+	background-color: rgba(0, 0, 0, 0.73);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 	cursor: pointer;
 	transition: box-shadow 0.3s ease, transform 0.3s ease;
+	z-index: 9999999999;
 }
 
 .icon-button:hover {
@@ -28,21 +28,59 @@
 	background-color: rgba(0, 0, 0, 0.73);
 	color: rgba(255, 255, 255, 0.22);
 	z-index: 1400;
-	padding: 20px;
 	border-radius: 50px;
 	display: flex;
-	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: 16px;
-	cursor: grab;
-	width: 300px; /* Укажите ширину и высоту, если нужно */
-	height: 300px;
+	cursor: pointer;
+	max-width: 300px;
+	width: 100%;
+	min-height: 300px;
+	bottom: 30px;
+	right: 30px;
 }
 
-.wrapper-main {
+.icon-circle {
+	position: relative;
 	display: flex;
-	gap: 16px;
+	justify-content: center;
+	align-items: center;
+	width: 250px;
+	height: 250px;
+}
+
+.icon-item {
+	position: absolute;
+	top: 40%;
+	left: 42%;
+}
+
+.icon-item.facebook {
+	transform: rotate(0deg) translate(90px) rotate(-0deg);
+}
+
+.icon-item.twitter {
+	transform: rotate(90deg) translate(90px) rotate(-90deg);
+}
+
+.icon-item.instagram {
+	transform: rotate(180deg) translate(90px) rotate(-180deg);
+}
+
+.icon-item.linkedin {
+	transform: rotate(270deg) translate(90px) rotate(-270deg);
+}
+
+.center-icon {
+	position: absolute;
+	width: 65px;
+	height: 65px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .hidden {
@@ -54,5 +92,13 @@
 }
 
 .icon-button-custom .icon {
-	color: rgba(255, 255, 255, 0.7);
+	fill: rgba(93, 255, 158, 0.556);
+}
+
+.icon-button-custom:hover {
+	background-color: rgba(255, 255, 255, 0.22);
+}
+
+.icon-button-custom svg:hover {
+	fill: rgba(93, 255, 158, 0.834);
 }
