--- a/front/src/components/UI/CardFileService/CardFileService.css
+++ b/front/src/components/UI/CardFileService/CardFileService.css
@@ -6,6 +6,14 @@
   overflow: hidden;
 }
 
+.wrapper-file-width {
+  border: 1px solid #00000021;
+  width: 100%;
+  min-height: 125px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
 .title-file {
   padding: 5px 20px;
   border-bottom: 1px solid #00000021;
