--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -1,11 +1,11 @@
 .file-service-photo {
-	/* background-color: #fff; */
 	width: 100%;
 	padding: 10px;
-	border: 1px solid #0000000f;
+	border: 1px solid rgba(255, 255, 255, 0.1);
 	border-radius: 10px;
 	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	background-image: linear-gradient(120deg, #84faaf1c 0%, #8fd2f409 100%);
 }
 
 .uphoto__label {
@@ -43,15 +43,16 @@
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
-	background: rgba(65, 82, 239, 0.284);
 	border-radius: 10px;
-	padding: 20px 10px 20px 10px;
-	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+	padding: 20px 10px;
+	box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
+	background: rgba(255, 255, 255, 0.8);
+	background: linear-gradient(to right, #f5e1e4, #e3eeff);
 }
 
 .user-details_photo {
 	display: flex;
-	/* justify-content: space-between; */
+	justify-content: space-between;
 	border-radius: 10px;
 	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -66,9 +67,11 @@
 	justify-content: center;
 	padding: 10px;
 	gap: 10px;
-	border: 1px solid rgba(255, 255, 255, 0.156);
+	border: 1px solid rgba(12, 12, 12, 0.046);
 	border-radius: 10px;
 	margin-right: 20px;
+	box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+	background: linear-gradient(to right, #f3e7e9, #e3eeff);
 }
 
 .user-details_photo .photo {
@@ -79,20 +82,17 @@
 	border-radius: 10px;
 }
 
-.user-details-text {
-	display: flex;
-}
-
 .udetails__info-list {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 20px;
-	background: rgba(255, 255, 255, 0.526);
+	background: rgb(255, 255, 255);
 	border-radius: 16px;
 	box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
 	backdrop-filter: blur(10px);
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	padding: 20px;
+	/* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
 }
 
 .list {
@@ -102,9 +102,23 @@
 	font-size: 18px;
 }
 
-.udetails__item {
-	border-radius: 20px;
+.user__details_right {
+	align-self: stretch;
+	border-radius: 16px;
+	box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+	border: 1px solid rgba(255, 255, 255, 0.1);
+	transition: box-shadow 0.3s;
+	background-color: rgba(255, 255, 255, 0.8);
+	background: linear-gradient(to left, #f3e7e9, #e3eeff);
+	background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+	/* background-color: rgba(255, 255, 255, 0.397); */
+	/* backdrop-filter: blur(10px); */
 }
+
+/* .user__details_right:hover {
+	box-shadow: 0 16px 48px rgba(0, 0, 0, 0.2);
+	border: 1px solid rgba(255, 255, 255, 0.123);
+} */
 
 /* Uwidgets */
 .udetails__uwidget {
