--- a/front/src/components/UI/AddFileRequest/AddFileRequest.css
+++ b/front/src/components/UI/AddFileRequest/AddFileRequest.css
@@ -17,8 +17,8 @@
 .custom-file-input {
   position: relative;
   display: inline-block;
-  width: 30px;
-  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
   border-radius: 50%;
   background-color: #2c3f52;
   text-align: center;
