finished process from client

--- a/front/src/components/UI/UserOrOrganizationCard/UserOrOrganizationCard.css
+++ b/front/src/components/UI/UserOrOrganizationCard/UserOrOrganizationCard.css
@@ -44,10 +44,11 @@
 }
 
 .wrapper-image {
-  border-radius: 10px;
+  border-radius: 20px;
   overflow: hidden;
   display: flex;
   align-items: center;
+  max-width: 150px;
 }
 
 .wrapper-image img {
