--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -1,23 +1,15 @@
-.file-service-photo {
-	width: 100%;
-	padding: 10px;
-	border: 1px solid rgba(255, 255, 255, 0.1);
-	border-radius: 10px;
-	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-		0 2px 4px -1px rgba(0, 0, 0, 0.06);
-	background-image: linear-gradient(120deg, #84faaf1c 0%, #8fd2f409 100%);
-}
-
-.uphoto__label {
-	font-weight: 600;
-	max-width: 700px;
-	font-size: 12px;
-}
-
 .uprofile_list {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+}
+.udetails__setting {
+	align-self: flex-end;
+}
+
+.udetails__setting:hover path {
+	transition: all 0.2s ease-in-out;
+	fill: rgba(109, 109, 109, 0.478);
 }
 
 .user-details {
@@ -52,34 +44,81 @@
 
 .user-details_photo {
 	display: flex;
-	justify-content: space-between;
-	border-radius: 10px;
-	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-		0 2px 4px -1px rgba(0, 0, 0, 0.06);
-	padding: 24px;
+	justify-content: center;
+	flex-direction: column;
 	align-items: center;
+	/* box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+		0 2px 4px -1px rgba(0, 0, 0, 0.06); */
+	padding: 24px;
 }
 
 .user_photo {
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	padding: 10px;
-	gap: 10px;
-	border: 1px solid rgba(12, 12, 12, 0.046);
-	border-radius: 10px;
-	margin-right: 20px;
 	box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-	background: linear-gradient(to right, #f3e7e9, #e3eeff);
+	border-radius: 50%;
+	position: relative;
+	/* background: linear-gradient(to right, #f3e7e9, #e3eeff); */
 }
 
-.user-details_photo .photo {
+.photo {
 	max-width: 350px;
 	width: 100%;
 	min-height: 250px;
 	max-height: 400px;
+}
+
+/* .file-service-photo {
+	display: flex;
+	max-width: fit-content;
+	text-align: center;
+	width: 100%;
+	padding: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.1);
 	border-radius: 10px;
+	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+		0 2px 4px -1px rgba(0, 0, 0, 0.06);
+} */
+
+.uphoto__label {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+}
+
+.user_photo:hover:not(:focus-visible) {
+	transition: background-color 0.2s ease-in-out;
+	background-color: rgba(23, 23, 23, 0.039);
+}
+
+.uphoto__setting {
+	position: relative;
+}
+
+.uphoto__setting_widget {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	font-weight: 600;
+	font-size: 12px;
+}
+
+/* 25,09,2024 Cделать uphoto__setting_widget (для смены фотограафии и тд )  */
+.uphoto__setting_widget {
+	background: rgba(255, 144, 144, 0.604);
+	padding: 20px;
+	border-radius: 10px;
+}
+
+/* 25,09,2024 Cделать uphoto__setting_widget (для смены фотограафии и тд )  */
+.uphoto__setting_text {
+	color: #fff;
 }
 
 .udetails__info-list {
@@ -95,6 +134,9 @@
 	/* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
 }
 
+/* #dde0ff */
+/*  #dde0ff */
+
 .list {
 	width: calc((100% - 20px) / 2);
 	color: #000;
@@ -104,13 +146,13 @@
 
 .user__details_right {
 	align-self: stretch;
-	border-radius: 16px;
-	box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-	border: 1px solid rgba(255, 255, 255, 0.1);
-	transition: box-shadow 0.3s;
-	background-color: rgba(255, 255, 255, 0.8);
-	background: linear-gradient(to left, #f3e7e9, #e3eeff);
-	background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+	/* border-radius: 16px; */
+	/* box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1); */
+	/* border: 1px solid rgba(255, 255, 255, 0.1); */
+	/* transition: box-shadow 0.3s; */
+	/* background-color: rgba(255, 255, 255, 0.8); */
+	/* background: linear-gradient(to left, #f3e7e9, #e3eeff); */
+	/* background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
 	/* background-color: rgba(255, 255, 255, 0.397); */
 	/* backdrop-filter: blur(10px); */
 }
