--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -20,7 +20,8 @@
 
 .uwidget__style {
 	/* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
-	background-color: #c7f4c2;
+	/* background-color: #c7f4c2; */
+	background-color: #dde0ff;
 	color: #000000e4;
 	font-weight: 600;
 	font-size: 16px;
