--- a/front/src/index.css
+++ b/front/src/index.css
@@ -178,3 +178,14 @@ a:hover {
 .btn:disabled {
 	opacity: 0.5;
 }
+
+/* CHARTS */
+.charts__bg {
+	background: linear-gradient(
+		112.1deg,
+		rgb(32, 38, 57) 11.4%,
+		rgb(63, 76, 119) 70.2%
+	);
+	box-shadow: 10px 10px 10px 10px rgba(218, 218, 218, 0.293);
+	border-radius: 20px;
+}
