--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -1,21 +1,15 @@
 .uwidget__content {
 	display: flex;
+	padding: 16px 16px;
 	align-items: center;
-	justify-content: center;
-	margin-bottom: 15px;
-	padding: 16px;
-	background: red;
 }
 
 .uwidget__style {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-	gap: 10px;
-	padding: 30px 30px 30px 30px;
-	/* max-width: 146px; */
+	justify-content: space-between;
+	align-self: stretch;
+	min-height: 170px;
 }
 
 .uwidget__style {
