--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -29,3 +29,24 @@
 	box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15),
 		0 4px 6px rgba(255, 255, 255, 0.25);
 }
+
+.primary {
+	color: #fff;
+	background: linear-gradient(135deg, #981bbbd8, #4bc9e5);
+}
+
+.secondary {
+	color: #fff;
+	background: #49fec3;
+	background: linear-gradient(135deg, #49fec3, #037bed);
+}
+
+.tertiary {
+	color: #fff;
+	background: #ee698e;
+	background: linear-gradient(135deg, #ee698e, #dbe4d9);
+}
+
+.uwidget__btn {
+	background: rgba(255, 255, 255, 0.081);
+}
