--- a/front/src/components/UI/WorkSpace/Department for technical services/TechnicalServices.css
+++ b/front/src/components/UI/WorkSpace/Department for technical services/TechnicalServices.css
@@ -3,6 +3,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 20px 0px 20px;
+  border-top: 1px solid #00000040;
+}
+
+.technical-content {
+  flex-grow: 1;
 }
 
 .technical-title {
@@ -11,7 +16,7 @@
   gap: 10px;
   font-size: 16px;
   color: #607d8b;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .table-container-technical {
