--- a/front/src/components/UI/UserOrOrganizationCard/UserOrOrganizationCard.css
+++ b/front/src/components/UI/UserOrOrganizationCard/UserOrOrganizationCard.css
@@ -70,3 +70,10 @@
 .wrapper-text span {
   font-weight: 600;
 }
+
+.panel-check-user {
+  width: 100%;
+  display: flex;
+  padding: 20px 20px;
+  gap: 10px;
+}
