--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -20,7 +20,8 @@
 	align-items: stretch;
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(3, 1fr);
+	grid-template-rows: minmax(0, auto);
+	gap: 10px;
 }
 
 .profile_style {
@@ -52,14 +53,13 @@
 .profile_center {
 	grid-area: profileCenter;
 	grid-column: 3/10;
-	grid-row: 1/3;
-	display: grid;
+	grid-row: 1/1;
 }
 
 .profile_right {
 	grid-area: profileRight;
 	grid-column: 10/13;
-	grid-row: 1/5;
+	grid-row: 1/2;
 }
 
 /* UbottomLink */
@@ -78,8 +78,8 @@
 	overflow-x: auto;
 	padding-bottom: 20px;
 	padding-top: 20px;
-	grid-column: 2/12;
-	grid-row: span 1 / 1;
+	/* grid-column: 2/12; */
+	/* grid-row: span 1 / 1; */
 }
 
 .profilebottomnav__link {
