--- a/front/src/components/UI/WorkSpace/Department for technical services/VPN Card/VPNCard.css
+++ b/front/src/components/UI/WorkSpace/Department for technical services/VPN Card/VPNCard.css
@@ -12,6 +12,10 @@
   background: linear-gradient(135deg, #cb2222, #5ea1c2);
 }
 
+.active-vpn {
+  background: linear-gradient(135deg, #5ea1c2, #2fb450);
+}
+
 .wrapper-info-vpn {
   display: flex;
   flex-direction: column;
@@ -19,7 +23,6 @@
   align-items: center;
   gap: 20px;
   width: 100%;
-  color: #fcdb62;
 }
 
 .vpn-info-list {
