--- a/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
+++ b/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
@@ -70,8 +70,8 @@ button {
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
-
 	background: linear-gradient(135deg, #ff6b6b, #ff8e8e);
+	/* background: linear-gradient(135deg, #29d8a6a3, #ff6b6ba1); */
 	border-radius: 16px;
 	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 	color: #fff;
