--- a/front/src/components/UI/WorkSpace/DepartmentCustomer/Services/ServiceCard/ServiceCard.css
+++ b/front/src/components/UI/WorkSpace/DepartmentCustomer/Services/ServiceCard/ServiceCard.css
@@ -1,13 +1,16 @@
 .service-list {
-  background: linear-gradient(135deg, #5ca1be, #607d8b);
-  padding: 20px;
+  /* background: linear-gradient(135deg, #5ca1be, #607d8b); */
+  padding: 20px 0;
   border-radius: 20px;
-  color: #fff;
+  color: #000;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 32.3%;
+  width: 23.94%;
+  gap: 10px;
+  border: 1px solid #00000027;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .wrapper-image-service-list {
@@ -16,4 +19,33 @@
   display: flex;
   align-items: center;
   max-width: 150px;
+}
+
+.service-list-info {
+  width: 100%;
+}
+
+.service-info-details {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.service-info-details p:nth-child(1) {
+  background-color: #607d8b;
+  color: #fff;
+  font-weight: normal !important;
+  padding: 10px 20px;
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+}
+
+.service-info-details p {
+  font-weight: bold;
+  padding: 0 20px;
+}
+
+.service-info-details span {
+  font-weight: normal;
 }
