--- a/front/src/components/Pages/UProfile/Uevents/Uevents.css
+++ b/front/src/components/Pages/UProfile/Uevents/Uevents.css
@@ -1,27 +1,27 @@
 .uevents__content {
-	padding: 16px;
+  padding: 16px;
 }
 .uevents__card {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  color: #fff;
+  background-color: #7299c9;
+  border-radius: 16px;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
+  width: 100%;
+  padding: 30px 30px 30px 30px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 
-	background-color: #dde0ff;
-	border-radius: 16px;
-	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
-	width: 100%;
-	padding: 30px 30px 30px 30px;
-	transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-	/* background-color: #fff; */
-	/* background: rgba(197, 255, 130, 0.584); */
-	/* background-color: #bfb5ff; */
+  /* background-color: #fff; */
+  /* background: rgba(197, 255, 130, 0.584); */
+  /* background-color: #bfb5ff; */
 }
 
 .uevents__card:hover {
-	transform: translateY(-8px);
-	box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15),
-		0 4px 6px rgba(255, 255, 255, 0.25);
+  transform: translateY(-8px);
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15),
+    0 4px 6px rgba(255, 255, 255, 0.25);
 }
