--- a/front/src/components/UI/File Services/FileService.css
+++ b/front/src/components/UI/File Services/FileService.css
@@ -1,22 +1,36 @@
 .fileservice-content {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 10px;
   align-items: center;
   padding: 20px;
   border-radius: 20px;
   border: 2px dashed rgb(190, 190, 190);
   width: 100%;
+  cursor: pointer;
+  transition: 0.3s all;
+}
+
+.fileservice-content:hover {
+  border: 2px solid #1650cf;
+  background-color: #e7ecfc;
+}
+
+.fileservice-content img {
+  width: 40px;
+  height: 40px;
 }
 
 .fileservice-input {
   opacity: 0;
   position: absolute;
   z-index: -1;
+  cursor: pointer;
 }
 
 .fileservice-content label {
   text-align: center;
+  cursor: pointer;
 }
 
 .fileservice-title {
