--- a/front/src/components/UI/UserOrOrganizationCard/UserOrOrganizationCard.css
+++ b/front/src/components/UI/UserOrOrganizationCard/UserOrOrganizationCard.css
@@ -89,3 +89,10 @@
   padding: 20px 20px;
   gap: 10px;
 }
+
+.wrapper-new-user-files {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
