--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -1,76 +1,76 @@
 .uprofile_list {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 .udetails__setting {
-  align-self: flex-end;
+	align-self: flex-end;
 }
 
 .udetails__setting:hover path {
-  transition: all 0.2s ease-in-out;
-  fill: rgba(109, 109, 109, 0.478);
+	transition: all 0.2s ease-in-out;
+	fill: rgba(109, 109, 109, 0.478);
 }
 
 .user-details {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .user-details_title {
-  color: #607d8b;
-  font-size: 22px;
-  font-weight: 500;
-  margin-bottom: 20px;
+	color: #607d8b;
+	font-size: 22px;
+	font-weight: 500;
+	margin-bottom: 20px;
 }
 
 .udetails__content {
-  display: flex;
-  flex-direction: column;
-  /* padding: 20px 20px 20px 20px; */
+	display: flex;
+	flex-direction: column;
+	/* padding: 20px 20px 20px 20px; */
 }
 
 .udetails__card {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  border-radius: 10px;
-  padding: 20px 10px;
-  box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
-  background: rgba(255, 255, 255, 0.8);
-  background: linear-gradient(to right, #f5e1e4, #e3eeff);
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	border-radius: 10px;
+	padding: 20px 10px;
+	box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
+	background: rgba(255, 255, 255, 0.8);
+	background: linear-gradient(to right, #f5e1e4, #e3eeff);
 }
 .unidentified--bg {
-  background: linear-gradient(135deg, #386c99d4, #7b4eb35b);
+	background: linear-gradient(135deg, #386c99d4, #7b4eb35b);
 }
 
 .user-details_photo {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  /* box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	/* box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
 		0 2px 4px -1px rgba(0, 0, 0, 0.06); */
-  padding: 24px;
+	padding: 24px;
 }
 
 .user_photo {
-  display: flex;
-  padding: 10px;
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  position: relative;
-  /* background: linear-gradient(to right, #f3e7e9, #e3eeff); */
+	display: flex;
+	padding: 10px;
+	box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+	border-radius: 50%;
+	position: relative;
+	/* background: linear-gradient(to right, #f3e7e9, #e3eeff); */
 }
 
 .photo {
-  max-width: 350px;
-  /* width: 100%; */
-  width: 400px;
-  height: 350px;
-  /* max-height: 400px; */
-  border-radius: 50%;
+	max-width: 350px;
+	/* width: 100%; */
+	width: 400px;
+	height: 350px;
+	/* max-height: 400px; */
+	border-radius: 50%;
 }
 
 /* .file-service-photo {
@@ -86,80 +86,80 @@
 } */
 
 .uphoto__label {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
 
 .user_photo:hover:not(:focus-visible) {
-  transition: background-color 0.2s ease-in-out;
-  background-color: rgba(23, 23, 23, 0.039);
+	transition: background-color 0.2s ease-in-out;
+	background-color: rgba(23, 23, 23, 0.039);
 }
 
 .uphoto__setting {
-  position: relative;
+	position: relative;
 }
 
 .uphoto__setting_widget {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  font-weight: 600;
-  font-size: 12px;
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	font-weight: 600;
+	font-size: 12px;
 }
 
 /* 25,09,2024 Cделать uphoto__setting_widget (для смены фотограафии и тд )  */
 .uphoto__setting_widget {
-  background: rgba(255, 144, 144, 0.604);
-  padding: 20px;
-  border-radius: 10px;
+	background: rgba(255, 144, 144, 0.604);
+	padding: 20px;
+	border-radius: 10px;
 }
 
 /* 25,09,2024 Cделать uphoto__setting_widget (для смены фотограафии и тд )  */
 .uphoto__setting_text {
-  color: #fff;
+	color: #fff;
 }
 
 .udetails__info-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  background: rgb(255, 255, 255);
-  border-radius: 16px;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 20px;
-  /* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+	background: rgb(255, 255, 255);
+	border-radius: 16px;
+	box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(10px);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	padding: 20px;
+	/* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
 }
 
 /* #dde0ff */
 /*  #dde0ff */
 
 .list {
-  width: calc((100% - 20px) / 2);
-  color: #000;
-  font-weight: 600;
-  font-size: 18px;
+	width: calc((100% - 20px) / 2);
+	color: #000;
+	font-weight: 600;
+	font-size: 18px;
 }
 
 .user__details_right {
-  align-self: stretch;
-  /* border-radius: 16px; */
-  /* box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1); */
-  /* border: 1px solid rgba(255, 255, 255, 0.1); */
-  /* transition: box-shadow 0.3s; */
-  /* background-color: rgba(255, 255, 255, 0.8); */
-  /* background: linear-gradient(to left, #f3e7e9, #e3eeff); */
-  /* background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
-  /* background-color: rgba(255, 255, 255, 0.397); */
-  /* backdrop-filter: blur(10px); */
+	align-self: stretch;
+	/* border-radius: 16px; */
+	/* box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1); */
+	/* border: 1px solid rgba(255, 255, 255, 0.1); */
+	/* transition: box-shadow 0.3s; */
+	/* background-color: rgba(255, 255, 255, 0.8); */
+	/* background: linear-gradient(to left, #f3e7e9, #e3eeff); */
+	/* background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
+	/* background-color: rgba(255, 255, 255, 0.397); */
+	/* backdrop-filter: blur(10px); */
 }
 
 /* .user__details_right:hover {
@@ -169,16 +169,15 @@
 
 /* Uwidgets */
 .udetails__uwidget {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 20px;
-  padding: 16px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background: rgba(242, 243, 237, 0.815);
+	padding: 16px;
 }
 
 .recharts-wrapper dashboard__content charts__bg .recharts-wrapper,
 .dashboard__content,
 .charts__bg {
-  width: 100% !important;
+	width: 100% !important;
 }
